Prevent logo from being stretched on mobile devices

--- a/drupal/web/themes/custom/camp/css/camp.main.css
+++ b/drupal/web/themes/custom/camp/css/camp.main.css
@@ -2356,6 +2356,7 @@ ul.atcb-list li {
 @media screen and (max-width: 772px) {
   .region--header__logo {
     padding: 0;
+    width: auto;
   }
   .region--header__logo img {
     max-height: 60px;
