--- a/drupal/web/themes/custom/camp/sass/molecules/components/_header.scss
+++ b/drupal/web/themes/custom/camp/sass/molecules/components/_header.scss
@@ -18,6 +18,9 @@
 
   @include media($tablet-p) {
     padding: 0;
+    // Override the width that is set by the span-columns(n) mixin above in .region--header__logo.
+    // This prevents the logo from being stretched on mobile devices but doesn't interfere with >= tablets devices.
+    width: auto;
 
     img {
       max-height: 60px;
